BE/DrumComesTrue/src/main/java/com/example/drumcomestrue/common/error/NotFoundException.java
package com.example.drumcomestrue.common.error;

import com.example.drumcomestrue.common.exception.ApplicationError;
import com.example.drumcomestrue.common.exception.ApplicationException;

public class NotFoundException extends ApplicationException {

	public NotFoundException(ApplicationError error) {
		super(error);
	}
}
